# nockpool-miner

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/quiver/: Cargo.toml
crates/quiver/src/: auth.rs  client.rs  device_info.rs  insecure.rs  lib.rs  new_job.rs  server.rs  submission.rs  types.rs
miner/: Cargo.toml
miner/src/: config.rs  device.rs  main.rs  miner.rs  new_job.rs
src/: auth.rs  config.rs  device.rs  key_manager.rs  key_storage.rs  main.rs  miner.rs  submission.rs
tests/network-disconnect/: README-network-isolation.md  cleanup.sh  disconnect-network.sh  reconnect-network.sh  run-in-namespace.sh  setup-isolation.sh
