[workspace]
resolver = "2"
members = [
    "miner",
    "crates/quiver"
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
assets = { path = "crates/assets" }
quiver = { path = "crates/quiver" }
tokio = { version = "1.44.2", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
dirs = { version = "6.0.0" }
equix = { version = "0.2.3" }
clap = { version = "4.5.37", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.75"
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", rev = "da0017ee887a868e231ed78c7de892779c17800d" }
tempfile = "3.8.1"
rand = { version = "0.8.5" }
x25519-dalek = { version = "2.0.1" }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hkdf = { version = "0.12.4" }
sha2 = { version = "0.10.9" }
chacha20poly1305 = { version = "0.10.1" }
snow = { version = "0.9.4" }
thiserror = { version = "1.0.61" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
crossbeam-queue = "0.3"
futures = "0.3"
uuid = { version = "1.6.1", features = ["v4"] }
hex = { version = "0.4.3" }
async-nats = "0.42.0"
async-trait = "0.1"
serde_json = { version = "1" }
r2d2 = { version = "0.8.10" }
diesel = { version = "2.2.11", features = ["postgres", "r2d2"] }
diesel_derives = { version = "2.2.6" }
axum = { version = "0.8.4" }
bytes = { version = "1.10.1" }
hyper = { version = "0.14", features = ["full"] }
rustls = "0.23"
postgrest = "1.0.1"

# nockchain
nockchain = { git = "https://github.com/swpsco/nockchain.git", rev = "2b912bff818ac5081109f374e58c5db277b4bb04", package = "nockchain" }
nockvm = { git = "https://github.com/swpsco/nockchain.git", rev = "2b912bff818ac5081109f374e58c5db277b4bb04", package = "nockvm" }
nockapp = { git = "https://github.com/swpsco/nockchain.git", rev = "2b912bff818ac5081109f374e58c5db277b4bb04", package = "nockapp" }
zkvm-jetpack = { git = "https://github.com/swpsco/nockchain.git", rev = "2b912bff818ac5081109f374e58c5db277b4bb04", package = "zkvm-jetpack" }
nockvm_macros = { git = "https://github.com/swpsco/nockchain.git", rev = "2b912bff818ac5081109f374e58c5db277b4bb04", package = "nockvm_macros" }
nockchain-libp2p-io = { git = "https://github.com/swpsco/nockchain.git", rev = "2b912bff818ac5081109f374e58c5db277b4bb04", package = "nockchain-libp2p-io" }

[workspace.lints.rust]
