[package]
name = "nockpool-miner"
version = "0.1.0"
edition = "2021"

[dependencies]
# general
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }
crossbeam-queue = { workspace = true }
clap = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = "0.30"
bytes = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }

# nockchain
nockvm = { workspace = true }
nockapp = { workspace = true }
zkvm-jetpack = { workspace = true }
nockvm_macros = { workspace = true }

# workspace
quiver = { workspace = true }
assets = { workspace = true }

[build-dependencies]
assets = { workspace = true }

[[bin]]
name = "miner"
path = "src/main.rs"